# TopLoop

./: .gitignore  .gitlab-ci.cmake  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  configure
Root/: AlgBase.cxx  AlgBaseVars.cxx  Algorithm.cxx  AlgorithmUtils.cxx  AlgorithmVars.cxx  AnaBase.cxx  EDMHelpers.cxx  FileManager.cxx  FinalState.cxx  Jet.cxx  Job.cxx  LeptonPair.cxx  LinkDef.h  SampleMetaSvc.cxx  Utils.cxx  Variables.cxx  WeightTool.cxx
TopLoop/: TopLoopDict.h  selection.xml  version.h.in
TopLoop/Core/: AlgBase.h  AlgBase.icc  Algorithm.h  Algorithm.icc  AnaBase.h  FileManager.h  Job.h  Logable.h  Loggable.h  SampleMetaSvc.h  Utils.h  Variables.h  WeightTool.h
TopLoop/EDM/: Electron.h  FinalState.h  Helpers.h  Jet.h  Lepton.h  LeptonPair.h  MET.h  MissingET.h  Muon.h  PhysicsObject.h  Tau.h
TopLoop/nanodm/: DileptonFinalState.h  Helpers.h  IPhysicsObject.h  Jet.h  Lepton.h  MissingET.h  PhysicsObject.h  README.md
TopLoop/spdlog/: async.h  async_logger.h  common.h  formatter.h  logger.h  spdlog.h
TopLoop/spdlog/details/: async_log_helper.h  async_logger_impl.h  console_globals.h  file_helper.h  fmt_helper.h  log_msg.h  logger_impl.h  mpmc_blocking_q.h  mpmc_bounded_q.h  os.h  pattern_formatter.h  pattern_formatter_impl.h  registry.h  spdlog_impl.h  thread_pool.h
TopLoop/spdlog/fmt/: fmt.h  ostr.h
TopLoop/spdlog/sinks/: android_sink.h  ansicolor_sink.h  base_sink.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  file_sinks.h  msvc_sink.h  null_sink.h  ostream_sink.h  rotating_file_sink.h  sink.h  stdout_color_sinks.h  stdout_sinks.h  syslog_sink.h  wincolor_sink.h
TopLoop/tqdm/: tqdm.h
cmt/: Makefile.RootCore  Makefile.local
config/: Common.mk  setup
data/: campaigns.json  dox.cfg  samplemeta.json  samplemeta.txt
doc/: dox.cfg
doc/source/: api.rst  api_core.rst  api_edm.rst  conf.py  core.rst  crash.rst  descripts.rst  edm.rst  index.rst  intro.md  intro.rst
doc/source/api/: alg.rst  fm.rst  job.rst  sms.rst  wt.rst
doc/source/api/nanodm/: fs.rst  help.rst  ipo.rst  jet.rst  lep.rst  met.rst
doc/source/core/: alg.rst  fm.rst  job.rst  log.rst  sms.rst  wt.rst
doc/source/edm/: classes.rst  helpers.rst
example/ttZ/: CMakeLists.txt
example/ttZ/include/ttZloop/: LinkDef.h  ttZloop.h
example/ttZ/python/: pyttZ.py
example/ttZ/src/: ttZloop.cxx
example/ttZ/util/: ttZuse.cpp
example/useDukeTop/: CMakeLists.txt  Makefile  Setup.sh
example/useDukeTop/include/MyDukeTopAna/: LinkDef.h  MyDukeTopAna.h
example/useDukeTop/src/: MyDukeTopAna.cxx
example/useDukeTop/util/: use.cpp
example/useTopLoop/: CMakeLists.txt  Makefile  Setup.sh
example/useTopLoop/include/MyTopLoopAna/: LinkDef.h  MyTopLoopAna.h
example/useTopLoop/python/: pyMyTopLoopAna.py
example/useTopLoop/src/: MyTopLoopAna.cxx
example/useTopLoop/util/: use.cpp
include/DukeTop/: AnaBase.h  FileManager.h  Job.h  LinkDef.h  Utils.h
include/TopLoop/: AnaBase.h  FileManager.h  Job.h  LinkDef.h  SampleMetaSvc.h  Utils.h
include/TopLoop/EDM/: FinalState.h  Jet.h  Lepton.h  LeptonPair.h  LinkDef.h  MET.h
include/TopLoopEDM/: FinalState.h  Jet.h  Lepton.h  LeptonPair.h  LinkDef.h  MET.h  PhysicsObject.h
share/doc/: dox.cfg
share/modules/: FindROOT.cmake
src/: AnaBase.cxx  FileManager.cxx  FinalState.cxx  Job.cxx  LeptonPair.cxx  SampleMetaSvc.cxx
